# qrek

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
qreki/: qreki-utf8.awk  qreki-utf8.doc
src/: astro.rs  main.rs  tempo.rs
src/astro/: julian.rs  mod.rs
src/astro/longitude/: jcg78.rs
