[package]
name = "qrek"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
async-ctrlc = "1.2.0"
